Adjustments for nullness annotated TypeParser (#10068)
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>
Signed-off-by: John Marshall <john.marshall.au@gmail.com>